update elasticsearch docs to include new configuration options